--- a/css/components/buttons/buttons.css
+++ b/css/components/buttons/buttons.css
@@ -6,6 +6,7 @@
     font-family: var(--font-body);
     line-height: 1.375rem;
     border: none;
+    border-radius: 0.25rem;
     cursor: pointer;
     text-decoration: none;
     transition: background-color 0.3s ease;
