--- a/css/components/cards/card-s.css
+++ b/css/components/cards/card-s.css
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     color: var(--color-black);
-    gap: var(--gap-xsmall);
+    gap: var(--gap-small);
     padding: var(--padding);
 }
 
