--- a/css/components/cards/card-s.css
+++ b/css/components/cards/card-s.css
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: var(--color-white);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    border-radius: 0.5rem;
 }
 
 .card-s__image {
@@ -17,7 +17,7 @@
 .card-s__image img {
     object-fit: cover;
     width: 100%;
-    border-radius: 8px 8px 0 0;
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .card-s__content {
