--- a/css/components/sections/footer.css
+++ b/css/components/sections/footer.css
@@ -20,6 +20,7 @@
     padding: 40px 24px 20px 24px;
     gap: 24px;
     grid-area: follow;
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .some {
@@ -34,21 +35,6 @@
     gap: 40px;
 }
 
-.newsletter {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.newsletter__input {
-    padding: 12px 16px;
-    border: none;
-}
-
-.newsletter__input::placeholder {
-    font-family: var(--font-body);
-    font-size: var(--body-medium);
-}
 
 .contact {
     display: flex;
@@ -63,16 +49,6 @@
     display: flex;
     align-items: center;
     gap: 8px;
-}
-
-.logo__image {
-    height: 32px;
-    width: 31px;
-}
-
-.logo__text {
-    font-family: var(--font-body);
-    font-size: var(--body-medium);
 }
 
 .contact-info {
@@ -106,6 +82,7 @@
     background-color: var(--color-black);
     padding: 20px 24px 40px 24px;
     grid-area: links;
+    gap: var(--gap-large);
 }
 
 .links a {
@@ -134,6 +111,8 @@
     padding: 24px 24px 20px 24px;
     border-top: 1px solid var(--color-white);
     grid-area: copyright;
+    border-radius: 0 0 0.5rem 0.5rem;
+
 }
 
 .copyright__text {
