--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,8 @@ main {
     main {
         width: calc(100% - 6rem);
         margin: 10rem 0;
+        flex-direction: column;
+        align-items: center;
     }
 
     .education-cta__header {
