--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ main {
     display: flex;
     flex-direction: column;
     max-width: 1024px;
+    width: 100%;
 }
 
 /* About and projects */
@@ -41,7 +42,9 @@ main {
     min-height: 100vh;
     margin-top: var(--margin-medium);
     justify-content: center;
-
+    align-items: center;
+    max-width: 1024px;
+    justify-self: center
 }
 
 .projects__heading,
@@ -69,76 +72,21 @@ main {
 /* Media queries */
 /* Tablet 768px */
 @media (min-width: 768px) {
-    main {
-        width: calc(100% - 3rem);
-        margin: 10rem 0;
-    }
-
     .section__header {
         max-width: 736px;
-    }
-
-    .events-cta__heading {
-        width: 672px;
-    }
-
-    .education-cta__header {
-        width: 672px;
-    }
-
-    .exhibitions-cta__heading {
-        width: 736px;
-    }
-
-    .education-cta__text--short {
-        display: none;
-    }
-
-    .education-cta__text--long {
-        display: initial;
-        font-size: var(--body-medium);
-        color: var(--color-white);
-        padding-top: var(--padding-medium);
     }
 }
 
 /* Laptop 1024px */
 @media (min-width: 1024px) {
     main {
-        width: calc(100% - 6rem);
-        margin: 10rem 0;
         flex-direction: column;
         align-items: center;
-    }
-
-    .education-cta__header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        max-width: 1024px;
-        padding: var(--padding-medium);
-        margin: 0 auto 0 auto;
     }
 
     .section__header {
         max-width: 1024px;
-    }
-
-    .events-cta__heading,
-    .education-cta__header,
-    .exhibitions-cta__heading {
-        width: 1024px;
-        padding-left: 16px;
-    }
-
-    .project_cards,
-    .education-cards {
-        flex-wrap: nowrap;
-        max-width: 1024px;
-    }
-
-    .exhibition-cards {
-        gap: var(--gap-large);
+        width: 100%;
     }
 }
 
