--- a/css/variables.css
+++ b/css/variables.css
@@ -8,6 +8,7 @@
     --color-white: #FFFFFF;
     --color-funred: #D91A60;
     --color-funpink: #F2137B;
+    --color-pink: #E7006B;
     --color-funpurple: #B532D9;
     --color-funyellow: #FFBD00;
     --color-funteal: #49F2E1;
