--- a/css/components/buttons/buttons.css
+++ b/css/components/buttons/buttons.css
@@ -12,28 +12,29 @@
     transition: background-color 0.3s ease;
     padding: 12px 16px;
     font-size: 1rem;
+    font-weight: 600;
     gap: 0.5rem;
 }
 
 .button.primary {
-    background-color: var(--color-purple);
+    background-color: var(--color-funpink);
     color: var(--color-white);
 }
 
 .button.primary:hover {
-    background-color: var(--color-darkpurple);
+    background-color: var(--color-pink);
 }
 
 /* Secondary Button */
 .button.secondary {
-    background-color: var(--color-darkpurple);
+    background-color: var(--color-funpurple);
     color: var(--color-white);
-    border: 1px solid var(--color-darkpurple);
+    border: 1px solid var(--color-funpurple);
 }
 
 .button.secondary:hover {
-    background-color: var(--color-purple);
-    border: 1px solid var(--color-purple);
+    background-color: var(--color-funpurple);
+    border: 1px solid var(--color-funpurple);
 }
 
 .button.inactive {
