--- a/css/components/sections/footer.css
+++ b/css/components/sections/footer.css
@@ -59,8 +59,8 @@
 
 }
 
-.links__visit,
-.links__involved {
+.links__goto,
+.links__projects {
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -95,6 +95,8 @@ a {
 }
 
 .footer-heading {
+    font-family: var(--font-body);
+    font-size: var(--body-small);
     font-weight: var(--font-weight-semibold);
 }
 
