--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -63,9 +63,7 @@ img {
 }
 
 a.current {
-    text-decoration-line: underline;
-    text-decoration-thickness: 0.15rem;
-    text-decoration-color: rgb(0, 0, 0, 1);
+    border-bottom: #000 solid 0.15rem;
 }
 
 /* Accessibility */
